# grid-forecast

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  template.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
research/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  Exploratory_Data_Analysis.ipynb  Model_Experiments.ipynb
