[project]
name = "grid-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "dotenv>=0.9.9",
    "entsoe-py>=0.7.10",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
